--- a/config/locales/en/devise.yml
+++ b/config/locales/en/devise.yml
@@ -4,6 +4,9 @@ en:
     confirmations:
       user:
         confirmed: Your email address has been successfully confirmed.
+        form:
+          page_title: Resend confirmation instructions
+          submit: Resend confirmation instructions
         send_instructions: You will receive an email with instructions for how to confirm your email address in a few minutes.
         send_paranoid_instructions: If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes.
     failure:
@@ -33,6 +36,13 @@ en:
       success: Successfully authenticated from %{kind} account.
     passwords:
       user:
+        form:
+          change:
+            page_title: Change your password
+            submit: Change my password
+          reset:
+            page_title: Forgot your password?
+            submit: Send me reset password instructions
         no_token: You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided.
         send_instructions: You will receive an email with instructions on how to reset your password in a few minutes.
         send_paranoid_instructions: If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes.
@@ -51,10 +61,16 @@ en:
     sessions:
       user:
         already_signed_out: Signed out successfully.
+        form:
+          page_title: Sign in
+          submit: Sign in
         signed_in: Signed in successfully.
         signed_out: Signed out successfully.
     unlocks:
       user:
+        form:
+          page_title: Resend unlock instructions
+          submit: Resend unlock instructions
         send_instructions: You will receive an email with instructions for how to unlock your account in a few minutes.
         send_paranoid_instructions: If your account exists, you will receive an email with instructions for how to unlock it in a few minutes.
         unlocked: Your account has been unlocked successfully. Please sign in to continue.
