--- a/config/locales/en/devise.yml
+++ b/config/locales/en/devise.yml
@@ -23,14 +23,19 @@ en:
     mailer:
       confirmation_instructions:
         subject: Confirmation instructions
+        user_subject: Confirmation instructions
       email_changed:
-        subject: Email Changed
+        subject: Email changed
+        user_subject: Email changed
       password_change:
-        subject: Password Changed
+        subject: Password changed
+        user_subject: Password changed
       reset_password_instructions:
         subject: Reset password instructions
+        user_subject: Reset password instructions
       unlock_instructions:
         subject: Unlock instructions
+        user_subject: Unlock instructions
     omniauth_callbacks:
       failure: Could not authenticate you from %{kind} because "%{reason}".
       success: Successfully authenticated from %{kind} account.
