Amend header for users/show
To display name using translations
consistently whether a manager looking
at someone else or a a caseworker viewing
their own details

--- a/config/locales/en/users.yml
+++ b/config/locales/en/users.yml
@@ -18,4 +18,4 @@ en:
       edit_link: Edit
       email_label: Email
       name_label: Name
-      page_title: Your account
+      page_title: "%{name}'s account"
