--- a/config/locales/en/users.yml
+++ b/config/locales/en/users.yml
@@ -11,8 +11,13 @@ en:
       email_label: Email
       first_name_label: First Name
       last_name_label: Last Name
-      page_title: Edit User
+      page_title: Edit user
       save_button: Save
+    index:
+      delete: Delete
+      delete_confirmation: Are you sure you want to delete %{name}'s account?
+      edit: Edit
+      page_title: List of users
     show:
       change_password_link: Change password
       edit_link: Edit
