Add new user creation workflow
Enable and authorize managers to
create new users. Include an email
confirmation field to ensure correctness
of emails and send a password reset instructions
email to the new user.

--- a/config/locales/en/layouts.yml
+++ b/config/locales/en/layouts.yml
@@ -12,6 +12,7 @@ en:
         terms: Terms and conditions
       header:
         navigation:
+          manage_users: Manage users
           menu: Menu
           show_hide: Show or hide Top Level Navigation
           sign_out: Sign out
