Share user form partial between edit and new
They are identical

--- a/config/locales/en/users.yml
+++ b/config/locales/en/users.yml
@@ -11,12 +11,15 @@ en:
       flash:
         success: User successfully added and password reset instructions sent
     edit:
-      email_confirmation_label: Confirm email
-      email_label: Email
-      first_name_label: First name
-      last_name_label: Last name
       page_title: Edit user
-      save_button: Save
+    form:
+      fields:
+        email_confirmation_label: Confirm email
+        email_label: Email
+        first_name_label: First name
+        last_name_label: Last name
+        roles_legend: What roles does the user have?
+        save_button: Save
     index:
       delete: Delete
       delete_confirmation: Are you sure you want to delete %{name}'s account?
@@ -24,12 +27,7 @@ en:
       new_link: Create a new user
       page_title: List of users
     new:
-      email_confirmation_label: Confirm email
-      email_label: Email
-      first_name_label: First name
-      last_name_label: Last name
       page_title: New user
-      save_button: Save
     show:
       change_password_link: Change password
       edit_link: Edit
