--- a/config/locales/en/searches.yml
+++ b/config/locales/en/searches.yml
@@ -1,8 +1,8 @@
 ---
 en:
   search:
-    case_number_label: Find a case
-    case_number_label_hint: Search by case number
+    case_reference_label: Find a case
+    case_reference_label_hint: Search by prosecution case reference
     defendant_label: Find a defendant
     defendant_label_hint: Search by MAAT number or defendant name
     no_result:
@@ -24,6 +24,7 @@ en:
     label_hint: choose an option
     legend_text: How do you want to search?
     page_title: Search filters
-    radio_case_number_label: By case number
+    radio_case_reference_label: By case reference
+    radio_case_reference_label_hint:
     radio_defendant_label: By defendant
     radio_defendant_label_hint: Name or MAAT reference
