--- a/config/locales/en/searches.yml
+++ b/config/locales/en/searches.yml
@@ -5,6 +5,9 @@ en:
     case_reference_label_hint: Search by prosecution case reference
     defendant_label: Find a defendant
     defendant_label_hint: Enter full name of defendant
+    dob:
+      legend_text: Defendant date of birth
+      hint_text: For example, 31 3 1980
     no_result:
       body: There are no matching results.
       body_guide: 'Improve your search results by:'
