Add nested locales files
translations are getting large so nesting
helps to keep it clearer.

--- a/config/locales/en/models/search.yml
+++ b/config/locales/en/models/search.yml
@@ -1,14 +1,11 @@
-# e.g. custom translsations for non-activerecord models
+---
 en:
   errors:
     models:
       search:
+        dob:
+          blank: Defendant date of birth required
         filter:
           blank: Filter required
         term:
           blank: Search term required
-        dob:
-          blank: Defendants date of birth required
-      search_filter:
-        id:
-          blank: Choose a filter
