--- a/config/locales/en/views/searches.yml
+++ b/config/locales/en/views/searches.yml
@@ -1,13 +1,9 @@
 ---
 en:
   search:
-    case_reference_label: Find a case
-    case_reference_label_hint: Search by prosecution case reference
-    defendant_label: Find a defendant
-    defendant_label_hint: Enter full name of defendant
     dob:
-      legend_text: Defendant date of birth
       hint_text: For example, 31 3 1980
+      legend_text: Defendant date of birth
     no_result:
       body: There are no matching results.
       body_guide: 'Improve your search results by:'
@@ -26,6 +22,11 @@ en:
       one: Search for "%{term}", born on "%{dob}" returned 1 result
       other: Search for "%{term}", born on "%{dob}" returned %{count} results
       zero: Search for "%{term}", born on "%{dob}" returned 0 results
+    term:
+      case_reference_label: Find a case
+      case_reference_label_hint: Search by prosecution case reference
+      defendant_label: Find a defendant
+      defendant_label_hint: Enter full name of defendant
   search_filter:
     label_hint: Choose an option
     legend_text: How do you want to search?
