Abstract validation error messages to default activemodel locales
Rails ActiveModel::Translation will automatically
pick up certain errors.

see https://guides.rubyonrails.org/i18n.html#translations-for-active-record-models
but not the comment:

```
If you are using a class which includes ActiveModel and does not inherit from
ActiveRecord::Base, replace activerecord with activemodel in the above key paths.
```

--- a/config/locales/en/models/search.yml
+++ b/config/locales/en/models/search.yml
@@ -1,11 +1,13 @@
 ---
 en:
-  errors:
-    models:
-      search:
-        dob:
-          blank: Defendant date of birth required
-        filter:
-          blank: Filter required
-        term:
-          blank: Search term required
+  activemodel:
+    errors:
+      models:
+        search:
+          attributes:
+            dob:
+              blank: Defendant date of birth required
+            filter:
+              blank: Filter required
+            term:
+              blank: Search term required
