Add oauth2 client for connection to adaptor
Enable connection to adaptor via oauth2 beacuse
adaptor has implemented OAuth2 and current master
unable to query it.

- add configurable oauth options
- add client
- add secrets
- basic handling of unauthorised access
- record oauth2 for testing

--- a/config/locales/en/views/searches.yml
+++ b/config/locales/en/views/searches.yml
@@ -1,6 +1,7 @@
 ---
 en:
   search:
+    connection_error: Connection error, please try again soon!
     dob:
       hint_text: For example, 31 3 1980
       legend_text: Defendant date of birth
