--- a/config/locales/en/views/error.yml
+++ b/config/locales/en/views/error.yml
@@ -1,6 +1,8 @@
 ---
 en:
   error:
+    401_message: Unauthorized connection to source data
+    401_title: Unauthorized
     404_message: If you entered a web address please check it was correct.
     404_title: Page not found
     422_message: Maybe you tried to change something you didn't have access to.
