--- a/config/locales/en/views/searches.yml
+++ b/config/locales/en/views/searches.yml
@@ -31,15 +31,17 @@ en:
     term:
       case_reference_label: Find a case
       case_reference_label_hint: Search by prosecution case reference
-      defendant_label: Find a defendant
-      defendant_label_hint: Enter full name of defendant
+      defendant_name_label: Find a defendant
+      defendant_name_label_hint: Enter full name of defendant
+      defendant_reference_label: Find a defendant
+      defendant_reference_label_hint: Enter full nation insurance number or ASN
   search_filter:
     label_hint: Choose an option
     legend_text: How do you want to search?
     page_title: Search filters
     radio_case_reference_label: Search for a case by URN
     radio_case_reference_label_hint: Case URN
-    radio_defendant_label: Search for a defendant by name and date of birth
-    radio_defendant_label_hint: Name and date of birth
-    radio_ni_or_asn_number_label: Search for a defendant by ASN or National Insurance number
-    radio_ni_or_asn_number_label_hint: Name and date of birth
+    radio_defendant_name_label: Search for a defendant by name and date of birth
+    radio_defendant_name_label_hint: Name and date of birth
+    radio_defendant_reference_label: Search for a defendant by ASN or National Insurance number
+    radio_defendant_reference_label_hint: Name and date of birth
