--- a/config/locales/en/views/searches.yml
+++ b/config/locales/en/views/searches.yml
@@ -16,6 +16,7 @@ en:
     result:
       caption: Search results
       defendant:
+        arrest_summons_number: ASN
         date_of_birth: Date of birth
         name: Name
         national_insurance_number: NI number
@@ -34,7 +35,7 @@ en:
       defendant_name_label: Find a defendant
       defendant_name_label_hint: Enter full name of defendant
       defendant_reference_label: Find a defendant
-      defendant_reference_label_hint: Enter full national insurance number or ASN
+      defendant_reference_label_hint: Enter full national insurance number or arrest summons number
   search_filter:
     label_hint: Choose an option
     legend_text: How do you want to search?
