--- a/config/locales/en/views/searches.yml
+++ b/config/locales/en/views/searches.yml
@@ -1,6 +1,7 @@
 ---
 en:
   search:
+    breadcrumb: Search
     connection_error: Connection error, please try again soon!
     dob:
       hint_text: For example, 31 3 1980
@@ -40,6 +41,7 @@ en:
       defendant_reference_label: Find a defendant
       defendant_reference_label_hint: Enter full national insurance number or arrest summons number
   search_filter:
+    breadcrumb: Home
     label_hint: Choose an option
     legend_text: How do you want to search?
     page_title: Search filters
