Add case reference text to case details breadcrumb
Inline with designs

--- a/config/locales/en/views/searches.yml
+++ b/config/locales/en/views/searches.yml
@@ -1,5 +1,7 @@
 ---
 en:
+  prosecution_case:
+    breadcrumb: Case %{prosecution_case_reference}
   search:
     breadcrumb: Search
     connection_error: Connection error, please try again soon!
