--- a/config/locales/en/views/layouts.yml
+++ b/config/locales/en/views/layouts.yml
@@ -3,9 +3,9 @@ en:
   layouts:
     application:
       cookies:
-        accept_cookies: Accept and close
+        accept_cookies: Accept cookies
         cookie_banner_message_html: We use <a class="govuk-link" href="%{page_path}">cookies to collect information</a> about how you use this service.
-        refuse_cookies: Refuse and close
+        refuse_cookies: Refuse cookies
       footer:
         built_by_html: Built by <a class="govuk-footer__link" href="https://mojdigital.blog.gov.uk/"><abbr title="Ministry of Justice Digital Services">MOJ Digital Services</abbr></a>
         contact: Contact
