--- a/config/locales/en/views/laa_references.yml
+++ b/config/locales/en/views/laa_references.yml
@@ -1,10 +1,14 @@
 ---
 en:
   laa_reference:
-    linking:
+    link:
       failure: A link to the court data source could not be created %{error_messages}
+      form:
+        maat_reference:
+          hint: Enter the MAAT ID so this case can be linked to the court data source
+          label: MAAT ID
+        submit: Create link to court data
       success: You have successfully linked to the court data source
-    maat_reference:
-      hint: Enter the MAAT ID so this case can be linked to the court data source
-      label: MAAT ID
-    submit: Create link to court data
+    unlink:
+      label: Remove link to court data
+      warning: Removing the link will stop hearing updates being received
