Enable login using username or email
Since we are adding a username for use
in unlinking we can allow users to login
using the username. This provides consistency
of experience with MLRA/MAAT.

--- a/config/locales/en/views/users.yml
+++ b/config/locales/en/views/users.yml
@@ -21,6 +21,7 @@ en:
         email_label: Email
         first_name_label: First name
         last_name_label: Last name
+        login_label: Username or email
         roles_legend: What roles does the user have?
         save_button: Save
     generic:
