--- a/config/locales/en/devise.yml
+++ b/config/locales/en/devise.yml
@@ -13,7 +13,7 @@ en:
       user:
         already_authenticated: You are already signed in.
         inactive: Your account is not activated yet.
-        invalid: Invalid email or password.
+        invalid: Invalid username or password.
         last_attempt: You have one more attempt before your account is locked.
         locked: Your account is locked.
         not_found_in_database: Invalid %{authentication_keys} or password.
