--- a/config/locales/en/models/user.yml
+++ b/config/locales/en/models/user.yml
@@ -7,6 +7,12 @@ en:
           attributes:
             email:
               blank: Enter an email address
+              taken: Email already taken
+            first_name:
+              blank: Enter a first name
+            last_name:
+              blank: Enter a last name
             username:
               blank: Enter a username
-
+              invalid: Username format is invalid
+              taken: Username already taken
