--- a/config/locales/en/views/defendants.yml
+++ b/config/locales/en/views/defendants.yml
@@ -2,5 +2,5 @@
 en:
   defendant:
     unlink:
-      failure: Unlinking from the court data source was unsuccessful
+      failure: The link to the court data source could not be removed. %{error_messages}
       success: You have successfully unlinked from the court data source
