move forms around

--- a/config/locales/en/views/defendants.yml
+++ b/config/locales/en/views/defendants.yml
@@ -1,6 +1,12 @@
 ---
 en:
   defendant:
+    form:
+      reason_code:
+        label: Reason for unlinking
+      other_reason_text:
+        label: Other reason
+        hint: Specify reason for unlinking
     unlink:
       errors:
         unlink_reason:
