--- a/config/locales/en/models/unlink_attempt.yml
+++ b/config/locales/en/models/unlink_attempt.yml
@@ -7,6 +7,7 @@ en:
           attributes:
             other_reason_text:
               blank: Enter the reason for unlinking
+              too_long: Unlinking reason is too long
             reason_code:
               blank: Choose a reason for unlinking
               inclusion: Choose a reason for unlinking from list
