Add translations for hearing controller and view text

--- a/config/locales/en/generic.yml
+++ b/config/locales/en/generic.yml
@@ -10,5 +10,6 @@ en:
         blank_option: Please select
     hearing: Hearing
     new_window: opens in a new window
+    not_available: Not available
     search: Search
     warning: Warning
