Extend link attempt model and spec
With the need to supply username to the adaptor
it is useful to abstract and isolate this logic
as well as the conditional maat reference logic
out to the model and include some validations.

--- a/config/locales/en/models/link_attempt.yml
+++ b/config/locales/en/models/link_attempt.yml
@@ -5,5 +5,9 @@ en:
       models:
         link_attempt:
           attributes:
+            defendant_id:
+              blank: Defendant is required
             maat_reference:
               invalid: Enter a maat reference in the correct format
+            username:
+              blank: Current username is required
