Display hearing "result" on hearing details page
Inline with designs - to show case worker
any hearing result per hearing.

--- a/config/locales/en/views/hearings.yml
+++ b/config/locales/en/views/hearings.yml
@@ -18,4 +18,5 @@ en:
         notice:
           no_hearing_details: No hearing details available
       hearing_type: Hearing type
+      result: Result
       time_listed: Time listed
