Move raw responses to partials
Declutter the view. Also use GDS stlye whitespace padding for
responsiveness and move content to translations

--- a/config/locales/en/generic.yml
+++ b/config/locales/en/generic.yml
@@ -12,4 +12,5 @@ en:
     new_window: opens in a new window
     not_available: Not available
     search: Search
+    view_raw_data: View raw data
     warning: Warning
