Rename column Offence and legislation

--- a/config/locales/en/views/searches.yml
+++ b/config/locales/en/views/searches.yml
@@ -40,7 +40,7 @@ en:
         heading: Offences
         mode_of_trial: Mode of trial
         plea: Plea
-        title: Offence
+        title: Offence and legislation
       representation_order:
         caption: Representation order list
         granted_at: Date granted
