Change header for hearings page
Designer wants to make it clear
to users that they are only viewing
a single hearing days event logs
for the hearing.

--- a/config/locales/en/generic.yml
+++ b/config/locales/en/generic.yml
@@ -8,7 +8,7 @@ en:
     form:
       select:
         blank_option: Please select
-    hearing: Hearing
+    hearing_day: Hearing day
     new_window: opens in a new window
     not_available: Not available
     prosecution_case: Prosecution case
