--- a/config/locales/en/views/hearings.yml
+++ b/config/locales/en/views/hearings.yml
@@ -18,5 +18,8 @@ en:
         notice:
           no_hearing_details: No hearing details available
       hearing_type: Hearing type
+      pagination:
+        next_page: Next hearing day
+        previous_page: Previous hearing day
       result: Result
       time_listed: Time listed
