--- a/config/locales/en/decorators/cracked_ineffective_trial.yml
+++ b/config/locales/en/decorators/cracked_ineffective_trial.yml
@@ -1,4 +1,4 @@
 ---
 en:
   cracked_ineffective_trial:
-    cracked_on_sentence_html: "%{type} on %{cracked_at_link}"
+    cracked_on_sentence: "%{type} on %{cracked_at}"
