--- a/config/locales/en/views/layouts.yml
+++ b/config/locales/en/views/layouts.yml
@@ -3,9 +3,13 @@ en:
   layouts:
     application:
       cookies:
-        accept_cookies: Accept cookies
+        title: Cookies on View Court Data
+        essential_cookies: We use some essential cookies to make this service work.
+        analytics_cookies: We’d also like to use analytics cookies so we can understand how you use the service and make improvements.
+        accept_cookies: Accept analytics cookies
         cookie_banner_message_html: We use <a class="govuk-link" href="%{page_path}">cookies to collect information</a> about how you use this service.
-        refuse_cookies: Refuse cookies
+        refuse_cookies: Refuse analytics cookies
+        view_cookies: View cookies
       footer:
         built_by_html: Built by <a class="govuk-footer__link" href="https://mojdigital.blog.gov.uk/"><abbr title="Ministry of Justice Digital Services">MOJ Digital Services</abbr></a>
         contact: Contact
